<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WalleSensory</string>
    <string name="sensory">Sensory</string>
    <string name="settings">Settings</string>
    <string name="settings_host">Host</string>
    <string name="settings_port">Port</string>
    <string name="azimuth">Azimuth</string>
    <string name="service_connected">Service connected</string>
    <string name="service_disconnected">Service disconnected</string>
    <string name="test">Test</string>
    <string name="calibrate">Calibrate</string>
    <string name="left">Left</string>
    <string name="middle">Middle</string>
    <string name="right">Right</string>
        
</resources>
