<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CapabilitiesActivity" >

    <TextView
        android:id="@+id/calibrate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calibrate"
        android:textStyle="bold" />

     <view
         android:id="@+id/calibrate_world"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/sensory_button"
         class="com.walle.sensory.CalibrateActivity$World"
	     android:background="@drawable/compass" />

     <Button
         android:id="@+id/sensory_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/calibrate_world"
         android:layout_below="@+id/calibrate_label"
         android:layout_marginTop="20dp"
         android:text="@string/sensory" />

     <Button
         android:id="@+id/middle_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/calibrate_world"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="36dp"
         android:text="@string/middle" />

     <Button
         android:id="@+id/left_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/calibrate_world"
         android:layout_centerVertical="true"
         android:layout_marginLeft="36dp"
         android:text="@string/left" />

     <Button
         android:id="@+id/right_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/calibrate_world"
         android:layout_centerVertical="true"
         android:layout_marginRight="36dp"
         android:text="@string/right" />
    
</RelativeLayout>