<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/host_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/settings_label"
        android:layout_below="@+id/settings_label"
        android:layout_marginTop="35dp"
        android:text="@string/settings_host"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/host_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/host_label"
        android:layout_alignBottom="@+id/host_label"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="phone" >
    </EditText>

    <TextView
        android:id="@+id/port_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/settings_label"
        android:layout_below="@+id/host_label"
        android:layout_marginTop="35dp"
        android:text="@string/settings_port"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/port_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/port_label"
        android:layout_alignBottom="@+id/port_label"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number" />



</RelativeLayout>